# promo-hub

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STRUCTURE_260201.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/landing/: package.json  tailwind.config.ts  tsconfig.json
apps/landing/src/app/: layout.tsx  page.tsx
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/signup/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx  page.tsx
apps/web/src/app/(dashboard)/calendar/: page.tsx
apps/web/src/app/(dashboard)/promotions/: page.tsx
apps/web/src/app/(dashboard)/promotions/[id]/: page.tsx
apps/web/src/app/(dashboard)/promotions/new/: page.tsx
apps/web/src/app/(dashboard)/settings/: page.tsx
apps/web/src/app/(dashboard)/settings/billing/: page.tsx
apps/web/src/app/(dashboard)/settings/team/: page.tsx
apps/web/src/app/api/calendar/: route.ts
apps/web/src/app/api/promotions/: route.ts
apps/web/src/app/api/teams/: route.ts
apps/web/src/app/api/webhooks/stripe/: route.ts
apps/web/src/components/dashboard/: AlertsPanel.tsx  ChannelStatus.tsx  FunctionKeyBar.tsx  LiveMetrics.tsx  PromotionCalendar.tsx
backend-archive/: pyproject.toml
backend-archive/backend/api/routes/: dashboard.py
backend-archive/backend/db/: __init__.py  seed.py  session.py
backend-archive/backend/models/: __init__.py  alert.py  base.py  inventory.py  promotion.py
